--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,16 +5,41 @@
     text-align: center;
 }
 
-H1 {
-    padding: 5px 10px;
+h1 {
+    font-size: large
 }
 
 p {
-    padding: 2.5px 10px;
     font-family: Helvetica
 }
 
 img {
     width: 128px;
     height: auto;
+    padding-top: 10px;
+    background-color: #606060;
+}
+
+div {
+    width: 700px;
+    padding: 2.5px 10px;
+    background-color: #606060;
+    border-radius: 20px;
+}
+
+.container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+div p {
+    background-color: #606060;
+}
+
+div h1 {
+    background-color: #606060;
 }
