--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,11 +6,12 @@
 }
 
 h1 {
-    font-size: large
+    font-size: x-large;
 }
 
 p {
-    font-family: Helvetica
+    font-family: Helvetica;
+    font-size: large;
 }
 
 img {
@@ -18,22 +19,20 @@ img {
     height: auto;
     padding-top: 10px;
     background-color: #606060;
+    border-radius: 20px 20px 20px 20px;
 }
 
-div {
-    width: 700px;
+.conteudo {
+    width: 20%;
     padding: 2.5px 10px;
     background-color: #606060;
     border-radius: 20px;
 }
 
 .container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 div p {
