--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,15 +18,11 @@ img {
     width: 128px;
     height: auto;
     padding-top: 10px;
-    background-color: #606060;
-    border-radius: 20px 20px 20px 20px;
 }
 
 .conteudo {
-    width: 20%;
+    width: 480px;
     padding: 2.5px 10px;
-    background-color: #606060;
-    border-radius: 20px;
 }
 
 .container {
@@ -35,10 +31,14 @@ img {
     justify-content: center;
 }
 
-div p {
+.cinza {
     background-color: #606060;
 }
 
-div h1 {
-    background-color: #606060;
+#arredondar {
+    border-radius: 20px 20px 20px 20px;
+}
+
+.cinza-escuro {
+    background-color: #404040;
 }
