--- a/css/estilo.css
+++ b/css/estilo.css
@@ -27,12 +27,14 @@ img {
     padding: 2.5px 10px;
     text-align: center;
     padding: 25px;
+    
 }
 
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 10%;
 }
 
 .cinza {
