--- a/css/layout.css
+++ b/css/layout.css
@@ -1,21 +1,24 @@
 *{box-sizing: border-box;}
 
 header{
-    background-color: blue;
+    background: color #000;;
     padding: 15px;
     text-align: center;
     margin-bottom: 10;
+    height: 10%;
+    color: #ddd;
+    display: block;
 
 }
 section{  
-    background-color: red;
+    background-color: #404040;
     padding: 15px;
     text-align: center;
     margin-bottom: 10;
 
 }
 footer{
-    background-color: blue;
+    background-color: #000;
     padding: 15px;
     text-align: center;
     margin-bottom: 10;
@@ -24,13 +27,33 @@ article{
     float: left;
     width: 75%;
     height: 80%;
-    background-color: green;
+    background-color: #606060
 }
 nav{
     float: left;
     width: 25%;
-    right: 80%;
+    height: 80%;
     padding: 20px;
-    background-color: aqua;
+    background-color: #492e80;
+}
+nav ul{
+    list-style-type: none;
+}
+section::after{
+    content: "";
+    display: table;
+    clear: both;
 }
 
+header img{
+    width: 58px;
+    height: auto;
+
+}
+
+@media(max-width: 720px){
+    article, nav{
+        width: 100%;
+        height: auto;
+    }
+}
