--- a/css/layout.css
+++ b/css/layout.css
@@ -1,56 +1,53 @@
-*{box-sizing: border-box;}
-
+*{
+    box-sizing: border-box;
+}
 header{
-    background: color #000;;
+    background-color: #000;
     padding: 15px;
     text-align: center;
-    margin-bottom: 10;
+    margin: 10;
     height: 10%;
     color: #ddd;
     display: block;
-
 }
-section{  
+section{
     background-color: #404040;
     padding: 15px;
     text-align: center;
     margin-bottom: 10;
-
 }
 footer{
     background-color: #000;
     padding: 15px;
     text-align: center;
-    margin-bottom: 10;
+    height: 10%;
 }
 article{
     float: left;
-    width: 75%;
+    width:75%;
     height: 80%;
-    background-color: #606060
+    background-color: #606060;
 }
 nav{
     float: left;
     width: 25%;
     height: 80%;
     padding: 20px;
-    background-color: #492e80;
+    background-color: #4b297f;
 }
 nav ul{
     list-style-type: none;
+    padding: 0;
 }
 section::after{
     content: "";
     display: table;
-    clear: both;
+    clear:both;
 }
-
 header img{
     width: 58px;
     height: auto;
-
 }
-
 @media(max-width: 720px){
     article, nav{
         width: 100%;
