--- a/css/tabela.css
+++ b/css/tabela.css
@@ -18,13 +18,16 @@
 
 #tabela tr:nth-child(even){
     background-color: #404040;
+    color: white;
 }
 #tabela th:hover{
     background-color: #385184;
 }
 #tabela tr:nth-child(even):hover{
     background-color: #2a2a2a;
+    color: white;
 }
 #tabela tr:hover{
     background-color:#808080;
+    color: white;
 }
