--- a/styles/estilo.module.css
+++ b/styles/estilo.module.css
@@ -1,6 +1,4 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
-}
+
 
 body{
     background-color: black;
@@ -55,6 +53,6 @@ article p{
     padding-left: 10;
 }
 
-#arredondar{
+arredondar{
     border-radius: 20px 20px 20px 20px;
 }
