--- a/styles/estilo.module.css
+++ b/styles/estilo.module.css
@@ -1,24 +1,24 @@
 
 
-body{
+.body{
     background-color: black;
     color:white;
 }
 
-h1{
+.h1{
     font-size: x-large;
 }
 
-p{
+.p{
     font-family: Helvetica;
 }
 
-img{
+.img{
    width: 128px;
    height: auto;
 }
 
-article p{
+.article-p{
     text-align: left;
     margin-left: 25px;
 }
@@ -40,11 +40,11 @@ article p{
 .cinza{
     background-color: #606060;
 }
-.cinza-escuro{
+.cinzaEscuro{
     background-color: #404040;
 }
 
-.cinza-claro{
+.cinzaClaro{
     background-color: #ddd;
     color: black;
     text-align: left;
