--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,7 +1,5 @@
-*{
-    box-sizing: border-box;
-}
-header{
+
+.header{
     background-color: #000;
     padding: 15px;
     text-align: center;
@@ -10,41 +8,41 @@ header{
     color: #ddd;
     display: block;
 }
-section{
+.section{
     background-color: #404040;
     padding: 15px;
     text-align: center;
     margin-bottom: 10;
 }
-footer{
+.footer{
     background-color: #000;
     padding: 15px;
     text-align: center;
     height: 10%;
 }
-article{
+.article{
     float: left;
     width:75%;
     height: 80%;
     background-color: #606060;
 }
-nav{
+.nav{
     float: left;
     width: 25%;
     height: 80%;
     padding: 20px;
     background-color: #4b297f;
 }
-nav ul{
+.nav-ul{
     list-style-type: none;
     padding: 0;
 }
-section::after{
+.section::after{
     content: "";
     display: table;
     clear:both;
 }
-header img{
+.header-img{
     width: 58px;
     height: auto;
 }
