--- a/styles/botao.module.css
+++ b/styles/botao.module.css
@@ -2,14 +2,14 @@
     margin: 0;
     font-size: 14pt;
 }
-.botao, .botao-lista{
+.botao, .botaoLista{
     text-decoration: none;
     padding: 5px 15px;
     background-color: #08ba94;
     color: #fff;
     border-radius: 20px;
 }
-.botao-lista{
+.botaoLista{
     margin-left: 5;
     font-size: 12pt;
     
