--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,4 +1,3 @@
-
 .header{
     background-color: #000;
     padding: 15px;
@@ -26,13 +25,7 @@
     height: 80%;
     background-color: #606060;
 }
-.nav{
-    float: left;
-    width: 25%;
-    height: 80%;
-    padding: 20px;
-    background-color: #4b297f;
-}
+
 .nav-ul{
     list-style-type: none;
     padding: 0;
@@ -47,7 +40,7 @@
     height: auto;
 }
 @media(max-width: 720px){
-    article, nav{
+    .article, .nav{
         width: 100%;
         height: auto;
     }
